test/1.4/errors/T_WEXPERIMENTAL.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

/// COMPILE-ONLY

device test;

/// WARNING WEXPERIMENTAL
session int vect x;
